--- a/css/styles.css
+++ b/css/styles.css
@@ -5,7 +5,6 @@
 /*основний колір фону #F5F5F5;*/
 /* вторинний колір фону #F5F4FA;*/
 
-
 :root {
     --primary-text-color:#757575;
     --title-text-color:#212121;
@@ -13,32 +12,54 @@
     --head-title-color:#FFFFFF;
     --primary-bg-color:#F5F5F5;
     --secondary-bg-color:#F5F4FA;
+    --hero-bg-color:#2F303A;
 }
-
 .page {
-color: #212121;
+color: var(--title-text-color);
 background-color: var(--primary-bg-color);
 }
-.list {
+.list, .feature-list, .work-list, .team-list  {
     list-style: none;
 }
 
+.accent {
+    color: #2196F3;
+}
 .logo {
     color: #000000;
 }
 .logo:hover {
     color:#2196F3;
 }
+/* header*/
+.header {
+    background-color: #FFFFFF;
+}
 /* site-nav*/
 .site-nav .link {
-    color:var(--accent-color);
+    color:var(--title-text-color);
 }
 .site-nav .link:hover, 
 .site-nav .link:focus {
-    color: black;
+    color: red;
+}
+.site-nav .link.current {
+    color: var(--accent-color);
+}
+/* auth-nav */
+.auth-nav .link,
+.auth-nav .link-mail {
+color: var(--primary-text-color);
+}
+.auth-nav .link-mail:hover,
+.auth-nav .link-mail:focus {
+    color: var(--accent-color);
 }
 
 /* hero */
+.hero {
+    background-color: var(--hero-bg-color);
+}
 .hero-title {
     color:var(--head-title-color) ;
 }
@@ -46,14 +67,43 @@ background-color: var(--primary-bg-color);
 .button {
     color:var(--head-title-color);
     background-color: var(--accent-color);
-
+}
+.button:hover,
+.button:focus {
+    background-color: #188CE8;
 }
 
 /* section */
+.section-team {
+    background-color: var(--secondary-bg-color);
+}
+.section-work, .section-feature {
+background-color: var(--primary-bg-color);
+}
 .section-title {
     color:var(--title-text-color) ;
 }
+
 /* features */
 .feature-list .title {
     color:var(--title-text-color) ;
+}
+.team-list .title {
+    color: var(--title-text-color);
+}
+.feature-list .text {
+    color: var(--primary-text-color);
+}
+.team-list .text {
+    color: var(--primary-text-color);
+}
+/* footer */
+.footer {
+   background-color: var(--hero-bg-color);
+}
+.address-nav .link-map {
+color: #FFFFFF;
+}
+.address-nav .link {
+    color: rgba(255, 255, 255, 0.6);
 }
