--- a/css/styles.css
+++ b/css/styles.css
@@ -28,6 +28,9 @@ background-color: var(--primary-bg-color);
 .logo {
     color: #000000;
 }
+.logo-footer {
+    color: var(--head-title-color);
+}
 .logo:hover {
     color:#2196F3;
 }
