--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,7 @@
 /*основний колір фону #F5F5F5;*/
 /* вторинний колір фону #F5F4FA;*/
 /* колір посилання в футері mail tel  rgba(255, 255, 255, 0.6) */
+/* колір кнопки при ховері #188CE8 */
 
 :root {
     --primary-text-color:#757575;
@@ -16,6 +17,7 @@
     --hero-bg-color:#2F303A;
     --primary-logo-color:#000000;
     --secondary-link-color: rgba(255, 255, 255, 0.6);
+    --button-bgc-hover-color: #188CE8;
 }
 body {
 color: var(--primary-text-color);
@@ -96,6 +98,7 @@ font-weight: 900;
 font-size: 44px;
 line-height: 1.36;
 text-align: center;
+text-transform: uppercase;
 letter-spacing: 0.06em;
 }
 /* hidden */
@@ -120,10 +123,13 @@ font-weight: 700;
 font-size: 16px;
 line-height: 1.88;
 letter-spacing: 0.06em;
+cursor: pointer;
+border-radius: 4px;
 }
 .button:hover,
 .button:focus {
-    background-color:var(--accent-color);
+    background-color: var(--button-bgc-hover-color);
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
 
 /* section */
@@ -144,6 +150,7 @@ text-align: center;
 font-weight: 700;
 font-size: 14px;
 line-height: 1.14;
+text-transform: uppercase;
 }
 .team-list .title {
     color: var(--title-text-color);
